// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkflowApp matches snapshot for conversational workflow 1`] = `
<div>
  <div
    class="ant-layout flex-1 flex flex-row bg-white rounded relative css-dev-only-do-not-override-l9pxc0"
  >
    <div
      class="ant-layout bg-transparent flex-col flex-shrink-0 h-full transition-all duration-300 ease-in-out p-4 w-full css-dev-only-do-not-override-l9pxc0"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless mb-1 css-dev-only-do-not-override-l9pxc0"
      >
        <div
          class="ant-collapse-item"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="collapsed"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              Capability Guide
            </span>
          </div>
        </div>
      </div>
      <div
        data-testid="workflow-chat-view"
      >
        Chat View Mock
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only absolute top-4 right-4 bg-blue-500 shadow-lg rounded-full w-8 h-8 flex items-center justify-center border-none monitoring-button"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="dashboard"
          class="anticon anticon-dashboard text-white"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="dashboard"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M924.8 385.6a446.7 446.7 0 00-96-142.4 446.7 446.7 0 00-142.4-96C631.1 123.8 572.5 112 512 112s-119.1 11.8-174.4 35.2a446.7 446.7 0 00-142.4 96 446.7 446.7 0 00-96 142.4C75.8 440.9 64 499.5 64 560c0 132.7 58.3 257.7 159.9 343.1l1.7 1.4c5.8 4.8 13.1 7.5 20.6 7.5h531.7c7.5 0 14.8-2.7 20.6-7.5l1.7-1.4C901.7 817.7 960 692.7 960 560c0-60.5-11.9-119.1-35.2-174.4zM761.4 836H262.6A371.12 371.12 0 01140 560c0-99.4 38.7-192.8 109-263 70.3-70.3 163.7-109 263-109 99.4 0 192.8 38.7 263 109 70.3 70.3 109 163.7 109 263 0 105.6-44.5 205.5-122.6 276zM623.5 421.5a8.03 8.03 0 00-11.3 0L527.7 506c-18.7-5-39.4-.2-54.1 14.5a55.95 55.95 0 000 79.2 55.95 55.95 0 0079.2 0 55.87 55.87 0 0014.5-54.1l84.5-84.5c3.1-3.1 3.1-8.2 0-11.3l-28.3-28.3zM490 320h44c4.4 0 8-3.6 8-8v-80c0-4.4-3.6-8-8-8h-44c-4.4 0-8 3.6-8 8v80c0 4.4 3.6 8 8 8zm260 218v44c0 4.4 3.6 8 8 8h80c4.4 0 8-3.6 8-8v-44c0-4.4-3.6-8-8-8h-80c-4.4 0-8 3.6-8 8zm12.7-197.2l-31.1-31.1a8.03 8.03 0 00-11.3 0l-56.6 56.6a8.03 8.03 0 000 11.3l31.1 31.1c3.1 3.1 8.2 3.1 11.3 0l56.6-56.6c3.1-3.1 3.1-8.2 0-11.3zm-458.6-31.1a8.03 8.03 0 00-11.3 0l-31.1 31.1a8.03 8.03 0 000 11.3l56.6 56.6c3.1 3.1 8.2 3.1 11.3 0l31.1-31.1c3.1-3.1 3.1-8.2 0-11.3l-56.6-56.6zM262 530h-80c-4.4 0-8 3.6-8 8v44c0 4.4 3.6 8 8 8h80c4.4 0 8-3.6 8-8v-44c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`WorkflowApp matches snapshot in studio mode 1`] = `
<div>
  <div
    class="ant-layout flex-1 flex flex-row bg-white rounded relative css-dev-only-do-not-override-l9pxc0"
  >
    <div
      class="ant-layout bg-transparent flex-col flex-shrink-0 h-full transition-all duration-300 ease-in-out p-4 w-[40%] css-dev-only-do-not-override-l9pxc0"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless mb-1 css-dev-only-do-not-override-l9pxc0"
      >
        <div
          class="ant-collapse-item"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="collapsed"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              Capability Guide
            </span>
          </div>
        </div>
      </div>
      <div
        data-testid="workflow-inputs-view"
      >
        Inputs View Mock
      </div>
    </div>
    <div
      class="ant-layout bg-transparent flex-col w-[60%] flex-shrink-0 h-full m-0 pl-3 pr-3 relative css-dev-only-do-not-override-l9pxc0"
    >
      <button
        aria-describedby="test-id"
        class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only absolute top-4 right-4 z-10 bg-white shadow-lg rounded-full w-6 h-6 flex items-center justify-center"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="close"
            class="anticon anticon-close"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        data-testid="workflow-diagram-view"
      >
        Diagram View Mock
      </div>
      <div
        class="ant-layout bg-transparent m-3 p-4 border border-gray-400 rounded flex-shrink-0 flex-grow pl-12 pr-12 css-dev-only-do-not-override-l9pxc0"
      >
        <h5
          class="ant-typography css-dev-only-do-not-override-l9pxc0"
        >
          Playback
        </h5>
        <div
          class="ant-slider css-dev-only-do-not-override-l9pxc0 ant-slider-horizontal ant-slider-with-marks"
        >
          <div
            class="ant-slider-rail"
          />
          <div
            class="ant-slider-track"
          />
          <div
            class="ant-slider-step"
          >
            <span
              class="ant-slider-dot ant-slider-dot-active"
              style="transform: translateX(-50%);"
            />
          </div>
          <div
            aria-describedby="test-id"
            aria-disabled="false"
            aria-orientation="horizontal"
            aria-valuemax="0"
            aria-valuemin="0"
            aria-valuenow="0"
            class="ant-slider-handle"
            role="slider"
            style="transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="ant-slider-mark"
          >
            <span
              class="ant-slider-mark-text ant-slider-mark-text-active"
              style="transform: translateX(-50%);"
            >
              End
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowApp matches snapshot in workflow mode 1`] = `
<div>
  <div
    class="ant-layout flex-1 flex flex-row bg-white rounded relative css-dev-only-do-not-override-l9pxc0"
  >
    <div
      class="ant-layout bg-transparent flex-col flex-shrink-0 h-full transition-all duration-300 ease-in-out p-4 w-full css-dev-only-do-not-override-l9pxc0"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless mb-1 css-dev-only-do-not-override-l9pxc0"
      >
        <div
          class="ant-collapse-item"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="collapsed"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              Capability Guide
            </span>
          </div>
        </div>
      </div>
      <div
        data-testid="workflow-inputs-view"
      >
        Inputs View Mock
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only absolute top-4 right-4 bg-blue-500 shadow-lg rounded-full w-8 h-8 flex items-center justify-center border-none monitoring-button"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="dashboard"
          class="anticon anticon-dashboard text-white"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="dashboard"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M924.8 385.6a446.7 446.7 0 00-96-142.4 446.7 446.7 0 00-142.4-96C631.1 123.8 572.5 112 512 112s-119.1 11.8-174.4 35.2a446.7 446.7 0 00-142.4 96 446.7 446.7 0 00-96 142.4C75.8 440.9 64 499.5 64 560c0 132.7 58.3 257.7 159.9 343.1l1.7 1.4c5.8 4.8 13.1 7.5 20.6 7.5h531.7c7.5 0 14.8-2.7 20.6-7.5l1.7-1.4C901.7 817.7 960 692.7 960 560c0-60.5-11.9-119.1-35.2-174.4zM761.4 836H262.6A371.12 371.12 0 01140 560c0-99.4 38.7-192.8 109-263 70.3-70.3 163.7-109 263-109 99.4 0 192.8 38.7 263 109 70.3 70.3 109 163.7 109 263 0 105.6-44.5 205.5-122.6 276zM623.5 421.5a8.03 8.03 0 00-11.3 0L527.7 506c-18.7-5-39.4-.2-54.1 14.5a55.95 55.95 0 000 79.2 55.95 55.95 0 0079.2 0 55.87 55.87 0 0014.5-54.1l84.5-84.5c3.1-3.1 3.1-8.2 0-11.3l-28.3-28.3zM490 320h44c4.4 0 8-3.6 8-8v-80c0-4.4-3.6-8-8-8h-44c-4.4 0-8 3.6-8 8v80c0 4.4 3.6 8 8 8zm260 218v44c0 4.4 3.6 8 8 8h80c4.4 0 8-3.6 8-8v-44c0-4.4-3.6-8-8-8h-80c-4.4 0-8 3.6-8 8zm12.7-197.2l-31.1-31.1a8.03 8.03 0 00-11.3 0l-56.6 56.6a8.03 8.03 0 000 11.3l31.1 31.1c3.1 3.1 8.2 3.1 11.3 0l56.6-56.6c3.1-3.1 3.1-8.2 0-11.3zm-458.6-31.1a8.03 8.03 0 00-11.3 0l-31.1 31.1a8.03 8.03 0 000 11.3l56.6 56.6c3.1 3.1 8.2 3.1 11.3 0l31.1-31.1c3.1-3.1 3.1-8.2 0-11.3l-56.6-56.6zM262 530h-80c-4.4 0-8 3.6-8 8v44c0 4.4 3.6 8 8 8h80c4.4 0 8-3.6 8-8v-44c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`WorkflowApp matches snapshot when workflow is not ready 1`] = `
<div>
  <div
    class="ant-layout flex-1 flex flex-row bg-white rounded relative css-dev-only-do-not-override-l9pxc0"
  >
    <div
      class="ant-layout bg-transparent flex-col flex-shrink-0 h-full transition-all duration-300 ease-in-out p-4 w-[40%] css-dev-only-do-not-override-l9pxc0"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless mb-1 css-dev-only-do-not-override-l9pxc0"
      >
        <div
          class="ant-collapse-item"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="collapsed"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              Capability Guide
            </span>
          </div>
        </div>
      </div>
      <div
        data-testid="alert"
        data-type="loading"
      >
        Getting your workflow ready.
        : 
        This workflow is still being configured. This might take a few minutes.
      </div>
    </div>
    <div
      class="ant-layout bg-transparent flex-col w-[60%] flex-shrink-0 h-full m-0 pl-3 pr-3 relative css-dev-only-do-not-override-l9pxc0"
    >
      <button
        aria-describedby="test-id"
        class="ant-btn css-dev-only-do-not-override-l9pxc0 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only absolute top-4 right-4 z-10 bg-white shadow-lg rounded-full w-6 h-6 flex items-center justify-center"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="close"
            class="anticon anticon-close"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        data-testid="workflow-diagram-view"
      >
        Diagram View Mock
      </div>
      <div
        class="ant-layout bg-transparent m-3 p-4 border border-gray-400 rounded flex-shrink-0 flex-grow pl-12 pr-12 css-dev-only-do-not-override-l9pxc0"
      >
        <h5
          class="ant-typography css-dev-only-do-not-override-l9pxc0"
        >
          Playback
        </h5>
        <div
          class="ant-slider css-dev-only-do-not-override-l9pxc0 ant-slider-horizontal ant-slider-with-marks"
        >
          <div
            class="ant-slider-rail"
          />
          <div
            class="ant-slider-track"
          />
          <div
            class="ant-slider-step"
          >
            <span
              class="ant-slider-dot ant-slider-dot-active"
              style="transform: translateX(-50%);"
            />
          </div>
          <div
            aria-describedby="test-id"
            aria-disabled="false"
            aria-orientation="horizontal"
            aria-valuemax="0"
            aria-valuemin="0"
            aria-valuenow="0"
            class="ant-slider-handle"
            role="slider"
            style="transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="ant-slider-mark"
          >
            <span
              class="ant-slider-mark-text ant-slider-mark-text-active"
              style="transform: translateX(-50%);"
            >
              End
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
